// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshots 1`] = `
<div
  className="ion-page"
>
  <ion-header>
    <ion-toolbar>
      <ion-title>
        Ionic Blank
      </ion-title>
    </ion-toolbar>
  </ion-header>
  <ion-content>
    The world is your
     
    oyster
    .
    <p>
      If you get lost, the
       
      <a
        href="https://ionicframework.com/docs/"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       
      will be your guide.
    </p>
  </ion-content>
</div>
`;

exports[`matches the snapshots 2`] = `
<div
  className="ion-page"
>
  <ion-header>
    <ion-toolbar>
      <ion-title>
        Ionic Blank
      </ion-title>
    </ion-toolbar>
  </ion-header>
  <ion-content>
    The world is your
     
    place
    .
    <p>
      If you get lost, the
       
      <a
        href="https://ionicframework.com/docs/"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       
      will be your guide.
    </p>
  </ion-content>
</div>
`;
